--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -119,7 +119,16 @@
         <scene sceneID="cQV-UO-Qm6">
             <objects>
                 <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="jSj-RX-ORN" userLabel="QuizPageController" customClass="QuizPageController" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" title="Title" id="nah-zi-AfV">
+                        <barButtonItem key="leftBarButtonItem" title="Item" id="Lfa-gr-5to"/>
+                        <barButtonItem key="rightBarButtonItem" title="Submit" id="iqR-q2-I1h">
+                            <connections>
+                                <action selector="SubmitBtnClick:" destination="jSj-RX-ORN" id="dq5-uH-GKv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="SubmitBtn" destination="iqR-q2-I1h" id="RyS-ON-L2i"/>
                         <segue destination="Rua-Fz-QSn" kind="unwind" identifier="SubmitQuiz" unwindAction="submitQuizSegueWithSegue:" id="uqJ-IX-Vdv"/>
                     </connections>
                 </pageViewController>
@@ -136,18 +145,158 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9CY-ul-6R9">
-                                <rect key="frame" x="166" y="193" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cxJ-yQ-8CW">
+                                <rect key="frame" x="15" y="143.99999999999997" width="345" height="291.33333333333326"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9CY-ul-6R9">
+                                        <rect key="frame" x="0.0" y="0.0" width="345" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="Hx1-XQ-eOD"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="G3P-7A-dxa">
+                                        <rect key="frame" x="0.0" y="110" width="345" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer: " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RVC-pb-a33">
+                                                <rect key="frame" x="0.0" y="0.0" width="66" height="60"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lu8-SU-tbn">
+                                                <rect key="frame" x="76" y="0.0" width="269" height="60"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="cMJ-7j-Bmc"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xpa-4h-uU2">
+                                        <rect key="frame" x="0.0" y="180" width="345" height="20.333333333333343"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ult-CJ-A1A">
+                                                <rect key="frame" x="0.0" y="0.0" width="34.666666666666664" height="20.333333333333332"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="35" id="V5k-Rg-OdC"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uG4-Cc-iTP" userLabel="AText">
+                                                <rect key="frame" x="34.666666666666657" y="0.0" width="310.33333333333337" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="uG4-Cc-iTP" firstAttribute="height" secondItem="Xpa-4h-uU2" secondAttribute="height" id="JrP-he-wKT"/>
+                                            <constraint firstItem="Ult-CJ-A1A" firstAttribute="width" secondItem="Xpa-4h-uU2" secondAttribute="width" multiplier="0.1" priority="999" id="NvE-IV-roi"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z4x-Ac-Qlg">
+                                        <rect key="frame" x="0.0" y="210.33333333333331" width="345" height="20.333333333333343"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qg1-wi-9dV" userLabel="B">
+                                                <rect key="frame" x="0.0" y="0.0" width="34.666666666666664" height="20.333333333333332"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="35" id="3ON-6q-dsi"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yws-uj-4MJ" userLabel="BText">
+                                                <rect key="frame" x="34.666666666666657" y="0.0" width="310.33333333333337" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="yws-uj-4MJ" firstAttribute="height" secondItem="Z4x-Ac-Qlg" secondAttribute="height" id="alg-YP-TqO"/>
+                                            <constraint firstItem="qg1-wi-9dV" firstAttribute="width" secondItem="Z4x-Ac-Qlg" secondAttribute="width" multiplier="0.1" priority="999" id="h2m-Qu-jcQ"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5j9-ta-v7M">
+                                        <rect key="frame" x="0.0" y="240.66666666666669" width="345" height="20.333333333333314"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="C" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZI-hb-XrA">
+                                                <rect key="frame" x="0.0" y="0.0" width="34.666666666666664" height="20.333333333333332"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="35" id="BFv-VD-G1V"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kWz-L7-5r1">
+                                                <rect key="frame" x="34.666666666666657" y="0.0" width="310.33333333333337" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="VZI-hb-XrA" firstAttribute="width" secondItem="5j9-ta-v7M" secondAttribute="width" multiplier="0.1" priority="999" id="Zgb-RS-jcK"/>
+                                            <constraint firstItem="kWz-L7-5r1" firstAttribute="height" secondItem="5j9-ta-v7M" secondAttribute="height" id="aYi-Lk-qep"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fhl-iK-mex">
+                                        <rect key="frame" x="0.0" y="271" width="345" height="20.333333333333314"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="D" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELt-jR-Zd4">
+                                                <rect key="frame" x="0.0" y="0.0" width="34.666666666666664" height="20.333333333333332"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="35" id="v2w-yw-bkr"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZB-xc-E2r">
+                                                <rect key="frame" x="34.666666666666657" y="0.0" width="310.33333333333337" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="wZB-xc-E2r" firstAttribute="height" secondItem="fhl-iK-mex" secondAttribute="height" id="VPV-rQ-kFd"/>
+                                            <constraint firstItem="ELt-jR-Zd4" firstAttribute="width" secondItem="fhl-iK-mex" secondAttribute="width" multiplier="0.1" priority="999" id="eGi-qN-JO1"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="9CY-ul-6R9" secondAttribute="trailing" id="Q9g-c5-gEE"/>
+                                    <constraint firstAttribute="trailing" secondItem="Xpa-4h-uU2" secondAttribute="trailing" id="bdy-SA-dMQ"/>
+                                    <constraint firstItem="9CY-ul-6R9" firstAttribute="leading" secondItem="cxJ-yQ-8CW" secondAttribute="leading" id="uoP-pT-50B"/>
+                                    <constraint firstItem="Xpa-4h-uU2" firstAttribute="leading" secondItem="cxJ-yQ-8CW" secondAttribute="leading" id="x3t-Gr-CfB"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="cxJ-yQ-8CW" firstAttribute="top" secondItem="iOG-Tf-a4a" secondAttribute="top" constant="100" id="6wW-70-RRO"/>
+                            <constraint firstItem="iOG-Tf-a4a" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="cxJ-yQ-8CW" secondAttribute="bottom" constant="100" id="Lp8-zL-aQk"/>
+                            <constraint firstItem="cxJ-yQ-8CW" firstAttribute="leading" secondItem="iOG-Tf-a4a" secondAttribute="leading" constant="15" id="YlK-FQ-SDm"/>
+                            <constraint firstItem="iOG-Tf-a4a" firstAttribute="trailing" secondItem="cxJ-yQ-8CW" secondAttribute="trailing" constant="15" id="eXR-cZ-WvM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="iOG-Tf-a4a"/>
                     </view>
                     <connections>
+                        <outlet property="AText" destination="uG4-Cc-iTP" id="Auf-Qv-evt"/>
+                        <outlet property="AnswerPickerField" destination="Lu8-SU-tbn" id="IbU-Id-xY3"/>
+                        <outlet property="BText" destination="yws-uj-4MJ" id="HgB-Xe-BOm"/>
+                        <outlet property="CText" destination="kWz-L7-5r1" id="UdL-xo-jWN"/>
+                        <outlet property="DText" destination="wZB-xc-E2r" id="tpo-Co-TR6"/>
                         <outlet property="QuestionTitle" destination="9CY-ul-6R9" id="Jyx-PQ-EbP"/>
                     </connections>
                 </viewController>
